--- a/index.html
+++ b/index.html
@@ -15,11 +15,8 @@
     </head>
     <body>
         <canvas id="canvas" width="300" height="300"></canvas>
-        <script type="text/javascript" async>
-            const canvas = document.querySelector('canvas')
-            const c = canvas.getContext('2d')
-        </script>
-        <script src="class.js" charset="utf-8"></script>
-        <script src="main.js" charset="utf-8"></script>
+        <script src="js/main.js" charset="utf-8" async></script>
+        <script src="js/class.js" charset="utf-8" async></script>
+        <script src="js/game.js" charset="utf-8" defer></script>
     </body>
 </html>
