--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <canvas id="canvas" width="300" height="300"></canvas>
-        <script src="js/main.js" charset="utf-8"></script>
+        <script src="js/setup.js" charset="utf-8"></script>
         <script src="js/class.js" charset="utf-8"></script>
         <script src="js/game.js" charset="utf-8" defer></script>
     </body>
