--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
             body {
                 margin: 0;
                 overflow: hidden;
-            }
-            canvas {
-                display: block;
+                background: #000;
             }
         </style>
     </head>
     <body>
         <canvas id="canvas" width="300" height="300"></canvas>
+        <script src="js/sprite_data.js" charset="utf-8"></script>
         <script src="js/setup.js" charset="utf-8"></script>
         <script src="js/class.js" charset="utf-8"></script>
         <script src="js/game.js" charset="utf-8" defer></script>
